--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,10 +56,10 @@ header .title{
     align-items: flex-start;
 }
 
-#question {
+#question, #highscore-title {
     color: #FFFFFF;
     font-size: 40px;
-    margin-top: 50px;
+    margin-top: 5px;
     margin-left: 10px;
     text-shadow: 1px 1px 2px #000000;
 }
@@ -69,3 +69,4 @@ header .title{
     margin: 15px;
     display: grid;
 }
+
