--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,14 @@ body {
     flex-direction: column;
 }
 
+#timer {
+    color: #ff0000;
+    font-size: 20px;
+    font-weight: bold;
+    text-shadow: 2px 2px 3px #000000;
+}
+
+/* Utilities */
 .hide {
     display: none;
 }
@@ -26,10 +34,12 @@ header .title{
     text-shadow: 1px 1px 2px #000000;
 }
 
+/* Text Section Style*/
 .quiz-text {
     color: #FFFFFF;
 }
 
+/* Button Section Style */
 .btn {
     padding: 15px;
     margin: 15px;
@@ -39,15 +49,7 @@ header .title{
     border-radius: 15px;
 }
 
-
-#timer {
-    color: #ff0000;
-    font-size: 20px;
-    font-weight: bold;
-    text-shadow: 2px 2px 3px #000000;
-}
-
-/* question content style starts */
+/* Question Section Style */
 .question-content {
     display: flex;
     flex-direction: column;
@@ -70,6 +72,9 @@ header .title{
     display: grid;
 }
 
-#score-table tr {
+/* Highscore Section Style */
+#score-table {
     border: 5px solid #FFFFFF;
+    color: #FFFFFF;
 }
+
